Final Project Commit!

--- a/app/views/carts/edit.html.erb
+++ b/app/views/carts/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', cart: @cart %>
 
-<%= link_to 'Show', @cart , class:"btn btn-xs btn-info" %> |
-<%= link_to 'Back', carts_path , class:"btn btn-xs btn-danger"  %>
+<%= link_to 'Show', @cart , class:"btn btn-xs btn-default" %> |
+<%= link_to 'Back', carts_path , class:"btn btn-xs btn-default"  %>
