--- a/app/views/line_items/show.html.erb
+++ b/app/views/line_items/show.html.erb
@@ -2,20 +2,20 @@
 
 <div class="panel panel-default">
 
-<div class="panel-header">line_item</div>
+<div class="panel-heading">line_item</div>
 
 <div class="panel-body">
 
 
 <p>
   <strong>Product:</strong>
-  <%= @line_item.product %>
+  <%= @line_item.product.title %>
 </p>
 
 
 <p>
   <strong>Cart:</strong>
-  <%= @line_item.cart %>
+  <%= @line_item.cart_id %>
 </p>
 
 
