--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="panel panel-default">
 
-<div class="panel-header">order</div>
+<div class="panel-heading">order</div>
 
 <div class="panel-body">
 
