--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product , class:"btn btn-xs btn-info" %> |
-<%= link_to 'Back', products_path , class:"btn btn-xs btn-danger"  %>
+<%= link_to 'Show', @product , class:"btn btn-xs btn-default" %> |
+<%= link_to 'Back', products_path , class:"btn btn-xs btn-default"  %>
