--- a/app/views/carts/_form.html.erb
+++ b/app/views/carts/_form.html.erb
@@ -12,6 +12,6 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit :create, class:"btn btn-success"%>
+    <%= f.submit :create, class:"btn btn-default"%>
   </div>
 <% end %>
