--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -5,16 +5,20 @@
 <table class="table table-responsive">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Cart ID</th>
+      <th>Session ID</th>
+      <th>Buttons</th>
     </tr>
   </thead>
 
   <tbody>
     <% @carts.each do |cart| %>
       <tr>
-        <td><%= link_to 'Show', cart , class:"btn btn-xs btn-info" %></td>
-        <td><%= link_to 'Edit', edit_cart_path(cart) , class:"btn btn-xs btn-warning" %></td>
-        <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-xs btn-danger" %></td>
+        <td><%= cart.id %></td>
+        <td><%= session.id %></td>
+        <td><%= link_to 'Show', cart , class:"btn btn-xs btn-danger" %>
+        <%= link_to 'Edit', edit_cart_path(cart) , class:"btn btn-xs btn-danger" %>
+        <%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-xs btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Cart', new_cart_path , class:"btn btn-xs btn-success" %>
+<%= link_to 'New Cart', new_cart_path , class:"btn btn-xs btn-danger" %>
