--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="form-group">
     <%= f.label :product_id %>
-    <%= f.text_field :product_id , class:"form-control" %>
+    <%= f.number_field :product_id, class:"form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :cart_id %>
-    <%= f.text_field :cart_id , class:"form-control" %>
+    <%= f.number_field :cart_id , class:"form-control" %>
   </div>
 
   <div class="actions">
