--- a/app/views/line_items/index.html.erb
+++ b/app/views/line_items/index.html.erb
@@ -14,10 +14,10 @@
   <tbody>
     <% @line_items.each do |line_item| %>
       <tr>
-        <td><%= line_item.product %></td>
-        <td><%= line_item.cart %></td>
-        <td><%= link_to 'Show', line_item , class:"btn btn-xs btn-info" %></td>
-        <td><%= link_to 'Edit', edit_line_item_path(line_item) , class:"btn btn-xs btn-warning" %></td>
+        
+        <td><%= line_item.cart_id %></td>
+        <td><%= link_to 'Show', line_item , class:"btn btn-xs btn-danger" %></td>
+        <td><%= link_to 'Edit', edit_line_item_path(line_item) , class:"btn btn-xs btn-danger" %></td>
         <td><%= link_to 'Destroy', line_item, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-xs btn-danger" %></td>
       </tr>
     <% end %>
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New Line Item', new_line_item_path , class:"btn btn-xs btn-success" %>
+<%= link_to 'New Line Item', new_line_item_path , class:"btn btn-xs btn-danger" %>
+
