--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -18,10 +18,7 @@
 
   <div class="form-group">
     <%= f.label :description %>
-    <%= f.text_area :description , class:"form-control", rows: 10, cols: 60 %>
-    
- 
-  
+    <%= f.text_area :description , class:"form-control" %>
   </div>
 
   <div class="form-group">
@@ -35,6 +32,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit :Update, class:"btn btn-default"%>
+    <%= f.submit :create, class:"btn btn-default"%>
   </div>
 <% end %>
