--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,18 +17,16 @@
     <% @products.each do |product| %>
       <tr>
         <td><%= product.title %></td>
-        <td><%= strip_tags(product.description) %></td>
+        <td><%= (strip_tags(product.description)) %></td>
         <td><%= image_tag(product.image_url) %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product , class:"btn btn-xs btn-info" %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) , class:"btn btn-xs btn-warning" %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-xs btn-danger" %></td>
+        <td><%= number_to_currency(product.price) %></td>
+        <td><%= button_to 'Add to Cart', line_items_path(product_id: product), class:"btn btn-xs btn-default" %></td>
+        
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Product', new_product_path , class:"btn btn-xs btn-success" %>
+
 
