--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,30 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+  <div class="navbar-header">
+      <a class="navbar-brand" href="/"><%= image_tag 'ol.jpg', alt: 'Online Store' %></a>
+    </div>
 
-<table class="table table-responsive">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= strip_tags(product.description) %></td>
-        <td><%= image_tag(product.image_url) %></td>
-        <td><%= product.price %></td>
-        <td><%= button_to 'Add to Cart', line_items_path(product_id: product), class:"btn btn-xs btn-default" %></td>
-        <td><%= link_to 'Show', product , class:"btn btn-xs btn-info" %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) , class:"btn btn-xs btn-warning" %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-xs btn-danger" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
